--- a/style.css
+++ b/style.css
@@ -1,13 +1,23 @@
 body {
-    background: #CCCCCC
+  
 }
 
 #banner {
     width: 100%;
+
 }
 
-h1 {
-    text-align: center
+.principal {
+	background: #CCCCCC;
+	padding: 30px;
+}
+
+.titulo-principal {
+	padding-left: 20px;
+}
+
+.titulo-centralizado {
+	text-align: center
 }
 
 p {
@@ -15,9 +25,29 @@ p {
 }
 
 #missao {
-    font-size: 20px
+	font-size: 20px;
 }
 
 em strong {
-    color: #FF0000;
+	color: #FF0000;
+}
+
+.itens {
+	font-style: italic;
+}
+
+.beneficios {
+	background: #FFFFFF;
+	padding: 20px;
+}
+
+ul {
+	display: inline-block;
+	vertical-align: top;
+	width: 20%;
+	margin-right: 15%;
+}
+
+.imagembeneficios {
+	width: 50%;
 }
